# example_django_raw_sql

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  shell.nix
docker/: nginx.conf  nginx.dockerfile
src/: manage.py
src/base/migrations/: 0001_initial.py  0002_auto_20240305_0206.py  0003_auto_20240305_0213.py
src/base/templates/registration/: login.html
src/dashboard/: urls.py  views.py
src/dashboard/templates/dashboard/: index.html
src/djangosql/: asgi.py  settings.py  urls.py  wsgi.py
